--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
 
     <h1>The Learn Enough Story</h1>
-
+    <a href="https://twitter.com/learnenough">
+    <img src="images/small_twitter_logo.png"></a>
     <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
       <em>technical sophistication</em>, the seemingly magical ability to take
@@ -25,8 +26,8 @@
       Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
       share pictures of his cat, but it would be cool if it were.
     </p>
-
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+    <img src="images/kitten.jpg" alt="An adorable kitten"></a>
 
     <h2>Background</h2>
 
