--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+
+    </div>
+
+
+
+
     <h1>The Learn Enough Story</h1>
     <a href="https://twitter.com/learnenough">
     <img src="images/small_twitter_logo.png"></a>
