--- a/tags.html
+++ b/tags.html
@@ -5,6 +5,13 @@
   </head>
   <body>
 
+        <div>
+          <a href="index.html">Home</a>
+          <a href="moby_dick.html">Moby Dick</a>
+          <a href="tags.html">HTML Tags</a>
+
+        </div>
+
     <h1>Important HTML Tags</h1>
 
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
@@ -80,14 +87,61 @@
           <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
           <td><em>technical sophistication</em></td>
         </tr>
+        <tr>
+          <td><code>strong</code></td>
+          <td>strong</td>
+          <td>make strong text</td>
+          <td>
+            <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
+          </td>
+          <td><strong>at least a billion people</strong></td>
+              </tr>
+              <tr>
+          <td><code>a</code></td>
+          <td>anchor</td>
+          <td>make hyperlink</td>
+          <td>
+            <code>
+              &lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;
+            </code>
+          </td>
+          <td><a href="https://learnenough.com/">Learn Enough</a></td>
+              </tr>
+              <tr>
+          <td><code>img</code></td>
+          <td>image</td>
+          <td>include an image</td>
+          <td>
+            <code>
+              &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
+            </code>
+          </td>
+          <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+        </tr>
+        <tr>
+          <td><code>li<code></td>
+          <td>listed items</td>
+          <td>lists content</td>
+          <td><code>&lt;li&gt;Vengeful whale&lt;li&gt;<code></td>
+          <td><li>Vengeful whale<li></td>
+        </tr>
+        <tr>
+          <td><code>ul</code></td>
+          <td>unorderd list</td>
+          <td>no numeric hiearachy</td>
+          <td><code>&lt;ul&gt;Moby Moby&lt;ul&gt;</code></td>
+          <td><ul>Moby Moby</ul></td>
+        </tr>
+        <tr>
+          <td><code>ol</code></td>
+          <td>ordered list</td>
+          <td>has numeric hiearachy</td>
+          <td><code>&lt;ol&gt;Migos&lt;ol&gt;</code></td>
+          <td><ol>Migos</ol></td>
+        </tr>
+
+
+
       </table>
-
-
-
-
-
-
-
-
     </body>
   </html>
