--- a/tags.html
+++ b/tags.html
@@ -5,12 +5,12 @@
   </head>
   <body>
 
-        <div>
-          <a href="index.html">Home</a>
-          <a href="moby_dick.html">Moby Dick</a>
-          <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right;">
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
 
-        </div>
+    </div>
 
     <h1>Important HTML Tags</h1>
 
@@ -39,8 +39,8 @@
         <th>Purpose</th>
       </tr>
       <tr>
-      <td><code>h1</code><code>&ndash;</code><code>h6</code></td>
-      <td>headings</td>
+      <td style="padding: 10px;"><code>h1</code><code>&ndash;</code><code>h6</code></td>
+      <td  style="padding: 10px;">headings</td>
       <td>include a heading (levels 1&ndash;6)</td>
       </tr>
       <tr>
