--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
@@ -16,9 +16,6 @@
 
 
     <h1>The Learn Enough Story</h1>
-    <a href="https://twitter.com/learnenough">
-    <img src="images/small_twitter_logo.png"></a>
-    <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
       <em>technical sophistication</em>, the seemingly magical ability to take
       command of your computer and get it to do your bidding. This includes
@@ -26,7 +23,17 @@
       Googling error messages, and knowing when to just reboot the darn thing.
       We believe there are <strong>at least a billion people</strong> who can benefit from
       learning technical sophistication, probably more. To join our
-      movement, <a href="https://learnenough.com/email">sign up for our official email list</a>
+      movement, <a href="https://learnenough.com/email">
+        sign up for our official email list</a> now.
+    </p>
+
+    <p>
+      <a href="http://twitter.com/learnenough" target="_blank"
+        style="text-decoration: none;">
+      <img src="images/small_twitter_logo.png" alt="Twitter logo">
+      </a>
+       You should follow Learn Enough on Twitter
+      <a href="http://twitter.com/learnenough" class="image_link" target="_blank">here</a>.
     </p>
 
     <p>
@@ -68,7 +75,7 @@
       <a href="https://www.learnenough.com>">learnenough.com</a>.
     </p>
 
-    <h2>Founders</h2>
+    <h2 id="founders">Founders</h2>
 
     <h3>Michael Hartl</h3>
 
