--- a/moby_dick.html
+++ b/moby_dick.html
@@ -2,14 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
     <title>Moby Dick</title>
   </head>
   <body>
 
-        <div style="text-align: right;">
+        <div class="nav_menu">
           <a href="index.html">Home</a>
-          <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
-          <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+          <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+          <a href="tags.html"  class="nav-spacing">HTML Tags</a>
 
         </div>
 
