--- a/tags.html
+++ b/tags.html
@@ -2,13 +2,14 @@
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
     <div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
-      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
 
     </div>
 
